@@ -1,3 +1,7 @@
+2011-02-06  Ben Abbott  <bpabbott@mac.com>
+
+	* plot/legend.m: Add demo for replacing existing legend.
+
 2011-02-06  John W. Eaton  <jwe@octave.org>
 
 	* general/circshift.m: New tests.
